--- a/scss/_notebooks.scss
+++ b/scss/_notebooks.scss
@@ -30,13 +30,49 @@
 
 /* ocultar los radio */
 
-#asus-gamer, #samsung-gamer, #lg-gamer, #gigabyte-gamer, #acer-led, #philips-led, #lg-led, #enova-tv, #samsung-tv{
+#asus-gamer, #acer-gamer, #gigabyte-gamer, #msi-gamer, #asus-intel, #lenovo-intel, #dell-intel, #asus-amd, #lenovo-amd, #hp-amd{
     display: none;
 }
-.asus-gamer, .samsung-gamer, .lg-gamer, .gigabyte-gamer, .acer-led, .philips-led, .lg-led, .enova-tv, .samsung-tv{
+.asus-gamer, .acer-gamer, .gigabyte-gamer, .msi-gamer, .asus-intel, .lenovo-intel, .dell-intel, .asus-amd, .lenovo-amd, .hp-amd{
     display: none;
 }
 
 #asus-gamer:checked ~ .padre-cards .asus-gamer{
+    display: flex;
+}
+
+#acer-gamer:checked ~ .padre-cards .acer-gamer{
+    display: flex;
+}
+
+#gigabyte-gamer:checked ~ .padre-cards .gigabyte-gamer{
+    display: flex;
+}
+
+#msi-gamer:checked ~ .padre-cards .msi-gamer{
+    display: flex;
+}
+
+#asus-intel:checked ~ .padre-cards .asus-intel{
+    display: flex;
+}
+
+#lenovo-intel:checked ~ .padre-cards .lenovo-intel{
+    display: flex;
+}
+
+#dell-intel:checked ~ .padre-cards .dell-intel{
+    display: flex;
+}
+
+#asus-amd:checked ~ .padre-cards .asus-amd{
+    display: flex;
+}
+
+#lenovo-amd:checked ~ .padre-cards .lenovo-amd{
+    display: flex;
+}
+
+#hp-amd:checked ~ .padre-cards .hp-amd{
     display: flex;
 }
