--- a/scss/_comunes.scss
+++ b/scss/_comunes.scss
@@ -14,6 +14,10 @@ body{
     background-color: #474747;
 }
 
+.title-h2{
+    margin-top: 25px;
+}
+
 footer{
     background: #01FFE1;
     background: linear-gradient(270deg, #01FFE1, #1501FF);
